--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,7 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+  <!--/*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>*/-->
 </body>
 </html>
