--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 <body>
   <app-root>Loading...</app-root>
 
+  <!--<script src="./assets/js/scripts.js"></script>-->
+
   <!--/*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>*/-->
 </body>
 </html>
