--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
 
   <!--<script src="./assets/js/scripts.js"></script>-->
 
-  <!--/*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>*/-->
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </body>
 </html>
