Added pre-loader image and styling

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href='http://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root><div class="clapat-mask"><div id="clapatloader"></div></div></app-root>
 
 </body>
 </html>
