--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Neversummer</title>
+  <title>Never Summer | Never Summer Industries - Snowboards, Longboards, Clothing and Accessories</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
